# Clipster

./: .env.example  .gitignore  LICENSE  README.md  clipskari.code-workspace  docker-compose.yml
backend/: .env.example  Dockerfile  config.py  deps.py  main.py  pyproject.toml  schemas.py
backend/routers/: auth.py  clips.py  config_ref.py  health.py  jobs.py
backend/services/: modal_client.py  scheduler.py  supabase_db.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: JobCard.tsx  Navbar.tsx  StatusBadge.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  select.tsx
frontend/src/hooks/: useAuth.ts  usePolling.ts
frontend/src/lib/: api.ts  supabase.ts  utils.ts
frontend/src/pages/: AuthCallback.tsx  Dashboard.tsx  JobDetail.tsx  Landing.tsx  Login.tsx  NewJob.tsx  Settings.tsx
frontend/src/types/: index.ts
modal_gpu/: README.md  modal_app.py  reframer.py  requirements.txt
supabase/: README.md  seed.sql
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 001_init.sql  002_rpcs.sql
