[project]
name = "clipskari-backend"
version = "1.0.0"
description = "FastAPI backend for ClipSkari — long-video to short-video converter"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.10",
    "supabase==2.7.4",
    "gotrue==2.5.0",
    "modal==0.64.0",
    "httpx==0.27.2",
    "python-jose[cryptography]==3.3.0",
    "PyJWT==2.9.0",
    "sse-starlette==2.1.3",
    "loguru==0.7.2",
    "tenacity==9.0.0",
    "yt-dlp==2024.8.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
